--- a/EXPINT/home.html
+++ b/EXPINT/home.html
@@ -10,8 +10,7 @@
 <body class = "obody">
         <div class="container">
             <div class="column left-column">
-                <h2>Will have a collage of the user's collages and media here</h2>
-                <p>Content for the left column.</p>
+                <p>My app is called Scrap. One functionality of the app is making digital collages with physical uploaded items using a collage editor. I want the user to be able to create meaningful designs that harness sentimentality that is usually reserved for physical objects. They can use these collages as wallpapers or to share with other people. Another functionality is to create an organized digital collection of physical sentimental items for the user. This collection can be sorted in a variety of ways, like by location or date etc., so that these items are more accessible to the user. With this, the user can create stories and collages that relate to their identity and growth. The content that would be added to Scrap’s collection is content that would usually collect dust in a grandma’s basement. But I think that these pieces have untapped potential to create meaningful art and understanding of oneself. </p>
             </div>
             <div class="column middle-column">
                 <p class = "top_text">Maya</p>
