--- a/EXPINT/editor.html
+++ b/EXPINT/editor.html
@@ -14,20 +14,24 @@
     </div>
     <div class = "container">
         <div class = "half" style = "align-items: center;">
-            <p>Title (if you click, you can edit the name)</p>
-            <p>Photo of canvas as background</p>
             <div class = "canvas">
-                <p>if you click on the canvas, it will open a window to edit the collage</p>
-                <p>if you click on the photo, it will open a window to edit the photo</p>
-                <p>if you click on the text, it will open a window to edit the text</p>
+                <p>Title (if you click, you can edit the name)</p>
+                <p>if you click on the mouse icon, the user can select, move, and resize content in the collage. </p>
+                <p>if you click on the square, you can select an image to have as the background or color.</p>
+                <p>if you right click on content, you have options to cut, copy, duplicate, or re-shape (go back to the cutting board). </p>
             </div>
         </div>
         <div class = "half">
             <div class = "media_container">
-                <p>if/then statements...</p>
+                <p>If you click on content and the cutting board is empty, it will show up on the cutting board.</p>
+                <p>If you click on content and the cutting board is not empty, it will ask you if you want to replace the existing content and show up on the cutting board.</p>
+                <p>If press on the scroll button and drag it down, it will scroll through the content.</p>
             </div>
             <div class = "media_cutter">
-                <p>if/then statements...</p>
+                <p>The cursor becomes a scissor when it is within the bounds of the cutting board.</p>
+                <p>When you press down and drag, the cutting tool starts cutting the photo's outsides that are bisected by the tool. </p>
+                <p>When you are done cutting, there will be a button to export it to the canvas. </p>
+                <p>If you click on the export button, the content will appear on the canvas where you can arrange it.</p>
             </div>
         </div>
     </div>
