--- a/EXPINT/collages.html
+++ b/EXPINT/collages.html
@@ -5,22 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lle1kea.css">
-    <title>Writing</title>
+    <title>Collages</title>
 </head>
 <body class = "obody">
-    <div class="container">
-        <div class="sidebar">
-            <a href= "index.html">Home</a>
-            <a href= "#projects.html">Projects</a>
-            <a href= "#about.html">About</a>
-            <a href= "#writing.html">Writing</a>
-        </div>
-        <div class = "mainR">
-            <h1>Education</h1>
-            <h1>Work Experience</h1>
-            <h1>Activities</h1>
-            <h1>Projects</h1>
+    <div class = "fixed-header">
+        <a href= "home.html">Home</a>
+        <p class = "center-text">Maya</p>
+    </div>
+    <div class = "mainR">
+        <p style="text-align: right; width: 100%; margin: 0; padding-right: 20px;">Sort by: opions that will sort the collection based on selection</p>
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="img/c1.JPG" alt="Project 1">
+                <p>Birthday_Card_5</p>
+                <p>08-09-2009</p>
+            </div>
+            <div class="grid-item">
+                <img src="img/c2.JPG" alt="Project 1">
+                <p>Valentines_Card_5</p>
+                <p>02-14-2010</p>
+            </div>
+            <div class="grid-item">
+                <img src="img/c3.JPG" alt="Project 1">
+                <div class="hover-overlay">
+                    <p>will have options overlay on hover:</p>
+                    <p>1. if Delete: asks if you want to delete</p>
+                    <p>2. if Edit: popup window to edit name, date, location...</p>
+                    <p>3. if More Info: gets more info for location ... </p>
+                </div>
+                <p>Drawing_7</p>
+                <p>2011</p>
+            </div>
+            <div class="grid-item">
+                <img src="img/c4.JPG" alt="Project 1">
+                <p>Birthday_Card_6</p>
+                <p>08-09-2010</p>
+            </div>
+            <div class="grid-item">
+                <img src="img/c4.JPG" alt="Project 1">
+            </div>
+            <div class="grid-item">
+                <img src="img/c4.JPG" alt="Project 1">
+            </div>
         </div>
     </div>
+    <a class="fixed-upload-button" href="upload.html">Upload</a>
 </body>
 </html>
